--- a/doc/design.org
+++ b/doc/design.org
@@ -290,12 +290,16 @@
      :LOGBOOK:
      CLOCK: [2019-06-26 Wed 23:11]--[2019-06-27 Thu 00:00] =>  0:49
      :END:
-*** INPROGRESS Grain Generator v1 requirements met [0/3]
-**** INPROGRESS Write interface
+*** INPROGRESS Grain Generator v1 requirements met [1/3]
+**** DONE Write interface
+     CLOSED: [2019-06-28 Fri 23:04]
      :LOGBOOK:
-     CLOCK: [2019-06-28 Fri 21:54]
+     CLOCK: [2019-06-28 Fri 21:54]--[2019-06-28 Fri 23:04] =>  1:10
      :END:
-**** BACKLOG Write implementation
+**** INPROGRESS Write implementation
+     :LOGBOOK:
+     CLOCK: [2019-06-28 Fri 23:04]
+     :END:
 ***** BACKLOG Controls [0/5]
       This is basically just the interface to the generator
 ****** BACKLOG Waveform (select between a set of defined waveforms - no samples yet)
