--- a/doc/design.org
+++ b/doc/design.org
@@ -166,11 +166,11 @@
     + [X] Multiply waveform, envelope and amplitude at each sample
     + [X] Function to determine when grain is done so it can be deleted
 ** Envelope Requirements
-*** v1 [0/4]
-    + [ ] Linear ADSR
-    + [ ] Ability to "trigger" and "release"
-    + [ ] Increment() method
-    + [ ] GetValue() method
+*** v1 [4/4]
+    + [X] Linear ADSR
+    + [X] Ability to "trigger" and "release"
+    + [X] Increment() method
+    + [X] GetValue() method
 ** Grain Generator Requirements
 *** v1
 **** Inputs [4/4]
@@ -366,7 +366,7 @@
      CLOCK: [2019-07-07 Sun 11:03]--[2019-07-08 Mon 10:31] => 23:28
      CLOCK: [2019-07-06 Sat 22:15]--[2019-07-07 Sun 01:21] =>  3:06
      :END:
-*** INPROGRESS Envelope v1 [2/4]
+*** INPROGRESS Envelope v1 [3/4]
 **** DONE Write Envelope interface
      CLOSED: [2019-07-13 Sat 22:32]
      :PROPERTIES:
@@ -384,12 +384,16 @@
      :LOGBOOK:
      CLOCK: [2019-07-13 Sat 22:32]--[2019-07-13 Sat 23:13] =>  0:41
      :END:
-**** BACKLOG Develop "trigger" and "release" signals
+**** DONE Develop "trigger" and "release" signals
+     CLOSED: [2019-07-13 Sat 23:14]
      :PROPERTIES:
      :Effort:   0:30
      :END:
-**** BACKLOG Unit tests
+**** INPROGRESS Unit tests
      :PROPERTIES:
      :Effort:   4:00
+     :END:
+     :LOGBOOK:
+     CLOCK: [2019-07-14 Sun 23:30]--[2019-07-15 Mon 00:30] =>  1:00
      :END:
 *** BACKLOG Write GrainCloud v1
